# ga-in-rust

./: .mise.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  pavlov_results.json  tft_results.json  tft_vs_pavlov.json
.cargo/: config.toml
.config/mise/: config.toml
.github/workflows/: ci.yml
benches/: simulation_benchmarks.rs
configs/: competitive.toml  cooperative.toml  default.toml  research.toml
docs/: ARCHITECTURE.md  EXAMPLES.md  STRATEGIES.md  STRATEGY_GUIDE.md  USAGE_EXAMPLES.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  simulation.rs
src/cli/: app.rs  mod.rs  output.rs
src/cli/commands/: config.rs  init.rs  mod.rs  run.rs
src/config/: loader.rs  mod.rs  schema.rs  validation.rs
src/core/: errors.rs  logging.rs  mod.rs  random.rs  traits.rs  types.rs  validation.rs
src/domain/: mod.rs  simulation.rs
src/engine/: mod.rs
src/engine/crossover/: mod.rs  single_point.rs
src/engine/genetic/: algorithm.rs  mod.rs  population.rs
src/engine/selection/: mod.rs  rank.rs  roulette.rs  tournament.rs
src/ga/: ga.rs
src/genetic/: algorithm.rs  individual.rs  mod.rs  operations.rs  population.rs
src/infrastructure/: config.rs  logging.rs  mod.rs
src/interface/: api.rs  cli.rs  mod.rs
src/models/: game.rs  mod.rs  model.rs
src/simulation/: engine.rs  environment.rs  mod.rs  runner.rs  stats.rs
src/strategies/: always_cooperate.rs  always_defect.rs  direct_reciprocity.rs  dynamic_strategy.rs  generalized_reciprocity.rs  indirect_reciprocity.rs  mod.rs  pavlov.rs  random.rs  simple_reputation.rs  strategy_selector.rs  third_party_influence.rs  tit_for_tat.rs  utils.rs
tests/integration/: simulation_tests.rs  test_integration.rs
tests/unit/: core_tests.rs  engine_tests.rs  test_cli.rs  test_config.rs  test_core.rs  test_simulation.rs
