[package]
name = "ga_prisoners_dilemma"
version = "0.2.0"
authors = ["Logta <takenobu15@gmail.com>"]
edition = "2021"
rust-version = "1.81"
description = "遺伝的アルゴリズムを用いた囚人のジレンマ戦略の進化シミュレーション"
license = "MIT OR Apache-2.0"
repository = "https://github.com/username/ga-in-rust"
keywords = ["genetic-algorithm", "prisoners-dilemma", "simulation", "evolution"]
categories = ["algorithms", "simulation"]
homepage = "https://github.com/username/ga-in-rust"  
documentation = "https://docs.rs/ga_prisoners_dilemma"
readme = "README.md"
exclude = [
    "/.github",
    "/target", 
    "/docs",
    "*.log",
    ".DS_Store"
]

[lib]
name = "ga_prisoners_dilemma"
crate-type = ["lib"]

[[bin]]
name = "ga-sim"
path = "src/main.rs"

[dependencies]
# CLI & Configuration
clap = { version = "4.5", features = ["derive", "env", "wrap_help", "suggestions"] }
config = { version = "0.14", features = ["toml", "yaml", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# UI & Progress
indicatif = { version = "0.17" }
colored = "2.1"
console = "0.15"
dialoguer = "0.11"

# Error handling - anyhowのみを使用
anyhow = "1.0"

# Utilities
rayon = "1.10"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Random - SFMT高速乱数生成器を使用
sfmt = "0.7"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"

# 非同期ランタイム - 必要な機能のみ
tokio = { version = "1.46", features = ["rt", "rt-multi-thread", "macros", "fs"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
pretty_assertions = "1.4"
tempfile = "3.8"
tokio-test = "0.4"

[[bench]]
name = "simulation_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false

[profile.dev]
opt-level = 1  # 軽い最適化でビルド時間と実行速度のバランスを取る
debug = 1      # デバッグ情報を減らしてビルド時間短縮
overflow-checks = true
incremental = true
split-debuginfo = "unpacked"  # デバッグ情報を分離してリンク時間短縮

[profile.test]
opt-level = 1
debug = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1

[features]
default = []
full = ["parallel", "visualization"]
parallel = ["indicatif/rayon"]
visualization = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]